--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- logger -->
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -71,6 +73,13 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4jVersion}</version>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.sikulix/sikulixapi -->
+		<dependency>
+			<groupId>com.sikulix</groupId>
+			<artifactId>sikulixapi</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 
 	</dependencies>
