--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.9.10</version>
+			<version>LATEST</version>
 		</dependency>
 
 		<!-- Spring dependencies -->
@@ -82,5 +82,54 @@
 			<version>1.1.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<!-- jsonschema2pojo -->
+			<!-- method of invocation through maven: jsonschema2pojo-maven-plugin:0.5.1:generate -->
+			<plugin>
+				<groupId>org.jsonschema2pojo</groupId>
+				<artifactId>jsonschema2pojo-maven-plugin</artifactId>
+				<version>0.5.1</version>
+				<configuration>
+					<sourceDirectory>${basedir}/src/test/resources/json_examples</sourceDirectory>
+					<outputDirectory>${basedir}/src/main/java</outputDirectory>
+					<targetPackage>pojo</targetPackage>
+					<addCompileSourceRoot>true</addCompileSourceRoot>
+					<annotationStyle>gson</annotationStyle>
+					<sourceType>json</sourceType>
+					<includeAccessors>false</includeAccessors>
+					<serializable>false</serializable>
+
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
